<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/linearLayout" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="360.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="38.0sp" android:textColor="#ff000000" android:id="@+id/tv_reg_titulo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reg_titulo" android:textAlignment="textStart" />
        <ImageView android:id="@+id/iv_reg_icono" android:layout_width="0.0dip" android:layout_height="43.0dip" android:layout_weight="1.0" />
    </LinearLayout>
    <ImageView android:id="@+id/iv_reg_foto" android:layout_width="93.0dip" android:layout_height="96.0dip" android:layout_marginTop="24.0dip" android:cropToPadding="false" android:layout_marginEnd="28.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:srcCompat="@drawable/icono_anadir_foreground" />
    <com.google.android.material.textfield.TextInputLayout android:clipToPadding="false" android:layout_width="192.0dip" android:layout_height="55.0dip" android:layout_marginTop="68.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="138.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/et_reg_nombre" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/reg_nombre" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:layout_width="300.0dip" android:layout_height="55.0dip" android:layout_marginTop="132.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/et_reg_email" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/reg_email" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:textStyle="bold" android:textColor="#ff000000" android:id="@+id/textView" android:layout_width="149.0dip" android:layout_height="20.0dip" android:layout_marginTop="24.0dip" android:text="@string/reg_prod" android:layout_marginEnd="192.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
    <Spinner android:id="@+id/sp_reg_estado" android:paddingLeft="-10.0dip" android:layout_width="173.0dip" android:layout_height="45.0dip" android:layout_marginTop="368.0dip" android:textAlignment="textStart" android:paddingEnd="-5.0dip" android:layout_marginEnd="11.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout" style="@style/Widget.AppCompat.Spinner.Underlined" />
    <Spinner android:id="@+id/sp_reg_prod" android:paddingLeft="-10.0dip" android:scrollbars="vertical" android:layout_width="160.0dip" android:layout_height="45.0dip" android:layout_marginTop="368.0dip" android:textAlignment="viewStart" android:paddingEnd="-5.0dip" android:layout_marginStart="11.0dip" android:layout_marginEnd="4.0dip" android:contextClickable="false" app:layout_constraintEnd_toStartOf="@+id/sp_reg_estado" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout" style="@style/Widget.AppCompat.Spinner.Underlined" />
    <com.google.android.material.textfield.TextInputLayout android:layout_width="300.0dip" android:layout_height="55.0dip" android:layout_marginTop="208.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/et_reg_pass1" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/reg_pass1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/textInputLayout" android:layout_width="300.0dip" android:layout_height="55.0dip" android:layout_marginTop="268.0dip" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/et_reg_pass2" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/reg_pass2" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:textStyle="bold" android:textColor="#ff000000" android:id="@+id/textView3" android:layout_width="168.0dip" android:layout_height="20.0dip" android:layout_marginTop="24.0dip" android:text="@string/reg_estado" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
    <TextView android:textSize="13.5sp" android:id="@+id/textView5" android:layout_width="203.0dip" android:layout_height="52.0dip" android:layout_marginTop="4.0dip" android:text="@string/reg_bienvenida" android:lineSpacingExtra="8.0sp" android:textAlignment="textStart" android:layout_marginStart="30.0dip" app:layout_constraintEnd_toStartOf="@+id/iv_reg_foto" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    <CheckBox android:id="@+id/cbx_reg_terminos" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="19.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/sp_reg_prod" />
    <TextView android:textSize="17.0sp" android:textColor="#ff000000" android:id="@+id/tv_reg_terminos" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/reg_aceptar_terminos" android:layout_marginEnd="32.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/sp_reg_estado" />
    <Button android:id="@+id/bt_reg_registro" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/reg_boton_registro" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/tv_reg_terminos" />
</androidx.constraintlayout.widget.ConstraintLayout>