<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_ing_logo"
        android:layout_width="180dp"
        android:layout_height="183dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="88dp"
        android:tint="?attr/colorPrimarioTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono"
        tools:srcCompat="@drawable/icono" />

    <TextView
        android:id="@+id/tv_ing_titulo"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimarioTexto"
        android:textSize="34sp"
        android:textStyle="italic"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_ing_logo" />

    <TextView
        android:id="@+id/tv_ing_ingreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/ing_nueva_cuenta"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_ing_entrar" />

    <EditText
        android:id="@+id/et_ing_email"
        android:layout_width="301dp"
        android:layout_height="57dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/ing_email"
        android:inputType="textPersonName"
        android:textColor="?attr/colorPrimarioTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ing_titulo" />

    <EditText
        android:id="@+id/et_ing_pass"
        android:layout_width="301dp"
        android:layout_height="58dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="29dp"
        android:ems="10"
        android:hint="@string/ing_pass"
        android:inputType="textPassword"
        android:textColor="?attr/colorPrimarioTexto"
        app:layout_constraintBottom_toTopOf="@+id/bt_ing_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ing_email" />

    <Button
        android:id="@+id/bt_ing_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?attr/colorPrimario"
        android:text="@string/ing_boton"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_ing_ingreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ing_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>