<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_ing_logo"
        android:layout_width="180dp"
        android:layout_height="183dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono"
        app:tint="?attr/colorPrimarioTexto"
        tools:srcCompat="@drawable/icono" />

    <TextView
        android:id="@+id/tv_ing_titulo"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimarioTexto"
        android:textSize="34sp"
        android:textStyle="italic"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_ing_logo" />

    <Button
        android:id="@+id/bt_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="104dp"
        android:backgroundTint="?attr/colorPrimario"
        android:fontFamily="@font/balsamiq_sans"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/por_registro"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="34sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ing_titulo" />

    <TextView
        android:id="@+id/tv_ing_ingreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/balsamiq_sans"
        android:text="@string/por_ingreso"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintTop_toBottomOf="@+id/bt_registro"
        tools:layout_editor_absoluteX="57dp" />
</androidx.constraintlayout.widget.ConstraintLayout>